# mcp-scenario-engine

./: .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.demo_simulations/: devops_scenario_1.json
.github/workflows/: ci.yml
.test_simulations/: test.json  test_history.json
examples/: demo_auction_theory.py  demo_devops_world.py  demo_dynamic_rules.py  demo_evolutionary_game.py  demo_persistence.py  demo_prisoners_dilemma.py  demo_scenario_a.py  demo_scenario_b.py  demo_weight_loss.py
releases/: README.md  RELEASE_NOTES_v1.0.1.md
src/mcp_scenario_engine/: __init__.py  actions.py  constraints.py  dynamic_rules.py  models.py  persistence.py  server.py  simulation.py  world_rules.py
tests/: __init__.py  test_actions.py  test_constraints.py  test_dynamic_rules.py  test_integration.py  test_simulation.py
